# spain

./: .gitignore  CLAUDE.md  PLAYBOOK.md  README.md  index.html  pyproject.toml
.claude/: launch.json
.github/workflows/: deploy.yml
data/: cita_previa.json  enduro.json  hate_crimes.json  hippo.json  internet_speed.json  municipalities_es.topojson  neuro.json  neurorehab.json  osm_hospitals.json  osm_slp.json  osm_spanish.json  osm_yoga.json  power_outages.json  psych.json  rent_cost.json  russian_share.json  salary_net_median.json  schools_neae.json  speech_ru.json  yoga_price.json
data/parquet/heatmap/: hate_crimes.meta.json  hate_crimes.parquet  internet_speed.meta.json  internet_speed.parquet  power_outages.meta.json  power_outages.parquet  rent_cost.meta.json  rent_cost.parquet
data/parquet/points/: enduro.parquet  hippo.parquet  hospitals.parquet  neae.parquet  neurorehab.parquet  schools.parquet  spanish.parquet  speech.parquet  yoga.parquet
etl/: to_parquet.py
ops/: Caddyfile  deploy.sh  spain-map.service
scripts/: fetch_cita_previa.py  fetch_hate_crimes.py  fetch_hippo.py  fetch_internet_speed.py  fetch_neae_andalucia.py  fetch_neae_cam_html.py  fetch_neae_canarias.py  fetch_neae_clm.py  fetch_neae_madrid.py  fetch_neae_murcia.py  fetch_neae_valencia.py  fetch_neuro.py  fetch_neurorehab.py  fetch_osm_points.py  fetch_osm_railway.py  fetch_psych.py  fetch_rent.py  fetch_russian_share.py  fetch_salary_net.py  fetch_yoga_price.py  spain_provinces.py
server/: config.py  main.py  pyproject.toml  storage.py
