[project]
name = "spain-map-server"
version = "0.1.0"
description = "FastAPI backend for spain-map — viewport-bounded point/heatmap queries over Parquet"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "duckdb>=1.1.0",
]

[tool.uv]
package = false
